--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.7",
     "apexcharts": "^5.3.6",
     "axios": "^1.13.2",
     "flatpickr": "^4.6.13",
@@ -18,7 +19,8 @@
     "react": "^18",
     "react-apexcharts": "^1.8.0",
     "react-dom": "^18",
-    "recharts": "^3.3.0"
+    "recharts": "^3.3.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^20",
